Window color change from black to maroon and icons changed

--- a/img.qrc
+++ b/img.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>img/icon.png</file>
+        <file>img/iconOld.png</file>
     </qresource>
 </RCC>
